styles.css
/* ----Font Family----- */
@import url("https://fonts.googleapis.com/css2?family=Manrope:wght@200..800&display=swap");




/* ----Global Variables---- */
:root {
	/* ----Colors---- */
	/* Primary */
	--lightCyan: hsl(193, 38%, 86%);
	--neonGreen: hsl(150, 100%, 66%);

	/* Neutral */
	--grayishBlue: hsl(217, 19%, 38%);
	--darkGrayishBlue: hsl(217, 19%, 24%);
	--darkBlue: hsl(218, 23%, 16%);

	/* ----Typography---- */
	--fontSize: 1.75rem; /* Quote font size: 28px*/
	--fontWeight: 800;
}



* {
	margin: 0;
	padding: 0;
	box-sizing: border-box;
}

body {
	font-family: "Manrope", sans-serif;
	background-color: var(--darkBlue);
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    height: 100vh;
}

.advice-card {
    background: var(--darkGrayishBlue);
    padding: 2rem;
    border-radius: 0.75rem;
    text-align: center;
    position: relative;
    max-width: 31.25rem;
    min-height: 18.75rem;
    box-shadow: 0 0.25rem 0.5rem rgba(0, 0, 0, 0.3);
}

.advice-number {
    color: var(--neonGreen);
    text-transform: uppercase;
}

.advice-text {
    color: var(--lightCyan);
    font-size: var(--fontSize);
    font-weight: var(--fontWeight);
    padding: 1.5rem;
}

.divider {
    position: relative;
}

.divider::before,
.divider::after {
    content: "";
    position: absolute;
    top: 35%;
    width: 40%;
    height: 1px;
    background: var(--grayishBlue);
}

.divider::before {
    left: 0;
}

.divider::after {
    right: 0;
}

.double-quote {
    font-size: 4rem;
    color: var(--lightCyan);
    position: relative;
    z-index: 1;
}

.dice-btn {
    background: var(--neonGreen);
    border: none;
    width: 3.5rem;
    height: 3.5rem;
    border-radius: 50%;
    text-align: center;
    cursor: pointer;
    position: absolute;
    bottom: -1.25rem;
    left: 50%;
    transform: translateX(-50%);
}

.dice-btn:hover {
    box-shadow: 0 0 1rem 0 hsl(150, 100%, 66%);
}





.attribution {
	font-size: 11px;
	text-align: center;
    margin-top: 5rem;
    color: hsl(227, 11%, 84%);
}

.attribution a {
	color: hsl(227, 11%, 84%);
}

